--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "bower": "^1.4.1",
     "browserify": "^10.2.4",
     "casperjs": "^1.1.0-beta3",
+    "dotenv": "2.0.0",
     "express": "^4.12.4",
     "grunt": "^0.4.4",
+    "grunt-browserify": "^3.8.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-cssmin": "^0.12.3",
@@ -46,9 +48,10 @@
     "grunt-shell": "^1.1.2",
     "jshint": "^2.7.0",
     "load-grunt-tasks": "^3.2.0",
+    "morgan": "1.7.0",
     "nodemon": "^1.3.7",
     "serve-favicon": "^2.2.1",
-    "grunt-browserify": "^3.8.0"
+    "winston": "2.2.0"
   },
   "devDependencies": {
     "karma": "^0.12.37",
