--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-shell": "^1.1.2",
     "jshint": "^2.7.0",
     "load-grunt-tasks": "^3.2.0",
+    "mongoose": "4.4.16",
     "morgan": "1.7.0",
     "nodemon": "^1.3.7",
     "serve-favicon": "^2.2.1",
