--- a/bower.json
+++ b/bower.json
@@ -45,8 +45,8 @@
     "classie": "~1.0.1",
     "angular-ui-router-styles": "~0.0.5",
     "ng-transloadit": "*",
-    "blueimp-gallery": "~2.15.2",
-    "angular-mocks": "latest"
+    "angular-mocks": "latest",
+    "PACE": "pace#^1.0.2"
   },
   "resolutions": {
     "angular": ">=1.2.x"
