--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "casperjs": "^1.1.0-beta3",
     "express": "^4.12.4",
     "grunt": "^0.4.4",
+    "grunt-browserify": "^3.8.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "^1.4.1",
     "grunt-karma": "~0.11.2",
     "grunt-nodemon": "^0.2.1",
+    "grunt-open": "^0.2.3",
     "grunt-postcss": "^0.4.0",
     "grunt-react": "^0.12.2",
     "grunt-shell": "^1.1.2",
@@ -48,7 +52,7 @@
     "load-grunt-tasks": "^3.2.0",
     "nodemon": "^1.3.7",
     "serve-favicon": "^2.2.1",
-    "grunt-browserify": "^3.8.0"
+    "time-grunt": "^1.4.0"
   },
   "devDependencies": {
     "karma": "^0.12.37",
